--- a/app/src/main/res/layout/account_details.xml
+++ b/app/src/main/res/layout/account_details.xml
@@ -77,6 +77,23 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginTop="68dp"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/changePassword"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <TextView
+        android:id="@+id/changePassword"
+        android:layout_width="0dp"
+        android:textAlignment="textEnd"
+        android:layout_height="wrap_content"
+        android:text="Change Password"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 </android.support.constraint.ConstraintLayout>
