--- a/app/src/main/res/layout/activity_add_hobby_activityt.xml
+++ b/app/src/main/res/layout/activity_add_hobby_activityt.xml
@@ -5,44 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.anshuman_hp.CogniChamp.AddHobbyActivityt">
-    <Spinner
-        android:id="@+id/chooseHobbyGroup"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="7dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
+<LinearLayout
+    android:layout_width="368dp"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    android:layout_marginTop="8dp"
+    android:layout_marginLeft="8dp"
+    android:weightSum="2"
+    app:layout_constraintLeft_toLeftOf="parent"
+    android:id="@+id/linearLayout4"
+    android:layout_marginStart="8dp">
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         android:text="Choose a Group"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/hobbyRecyclerChoose"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="@dimen/spinnerHeader"
+        android:layout_marginLeft="8dp" />
+    <Spinner
+        android:id="@+id/chooseHobbyGroup"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_weight="1"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chooseHobbyGroup" />
+        android:textAlignment="textEnd" />
+</LinearLayout>
 
     <Button
         android:id="@+id/saveHooby"
@@ -60,4 +51,17 @@
         app:layout_constraintTop_toBottomOf="@+id/hobbyRecyclerChoose"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/hobbyRecyclerChoose"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 </android.support.constraint.ConstraintLayout>
