--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/black"
+                android:background="@color/colorPrimary"
                 android:text="Sign Up With Email"
                 android:textAllCaps="false"
                 android:textColor="@color/cardview_light_background" />
