--- a/app/src/main/res/layout/educationnew.xml
+++ b/app/src/main/res/layout/educationnew.xml
@@ -3,18 +3,27 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_margin="5dp"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:weightSum="2"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView10"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="Select a Class" />
 
     <Spinner
+        android:layout_weight="1"
+        android:textAlignment="textEnd"
         android:id="@+id/selectClassEducation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
