--- a/app/src/main/res/layout/email_login.xml
+++ b/app/src/main/res/layout/email_login.xml
@@ -74,6 +74,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Logiin" />
+        android:text="Login" />
 
 </LinearLayout>
