--- a/app/src/main/res/layout/school_card.xml
+++ b/app/src/main/res/layout/school_card.xml
@@ -16,7 +16,7 @@
 
         <ImageView
             android:id="@+id/schoolLogo"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -24,7 +24,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="?android:attr/textSelectHandle" />
+            app:srcCompat="?android:attr/textSelectHandle"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/schoolName"
@@ -37,7 +39,9 @@
             android:textSize="30sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/schoolLogo" />
+            app:layout_constraintTop_toBottomOf="@+id/schoolLogo"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/schoolAddress"
@@ -47,7 +51,8 @@
             android:layout_marginTop="8dp"
             android:text="OCL Colony"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/schoolName" />
+            app:layout_constraintTop_toBottomOf="@+id/schoolName"
+            android:layout_marginStart="8dp" />
 
         <TextView
             android:id="@+id/schoolCity"
@@ -58,7 +63,8 @@
             android:text="Rajgangpur"
             android:textSize="15sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/schoolAddress" />
+            app:layout_constraintTop_toBottomOf="@+id/schoolAddress"
+            android:layout_marginStart="8dp" />
 
         <TextView
             android:id="@+id/schoolState"
@@ -69,7 +75,8 @@
             android:text="Odisha"
             android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/schoolCity" />
+            app:layout_constraintTop_toBottomOf="@+id/schoolCity"
+            android:layout_marginStart="8dp" />
 
         <ImageButton
             android:id="@+id/schoolDetailsEdit"
@@ -80,7 +87,8 @@
             android:background="@color/cardview_light_background"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_edit" />
+            app:srcCompat="@android:drawable/ic_menu_edit"
+            android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/schoolPinCode"
@@ -90,6 +98,7 @@
             android:layout_marginTop="8dp"
             android:text="pinCode"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/schoolState" />
+            app:layout_constraintTop_toBottomOf="@+id/schoolState"
+            android:layout_marginStart="8dp" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
