--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/colorPrimary"
-                android:text="Sign Up With Email"
+                android:text="Sign Up With Your Email"
                 android:textAllCaps="false"
                 android:textColor="@color/cardview_light_background" />
 
