--- a/app/src/main/res/layout/account_details.xml
+++ b/app/src/main/res/layout/account_details.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <android.support.constraint.ConstraintLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -49,23 +52,6 @@
             android:hint="Email Address" />
     </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:id="@+id/terms"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="7dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Terms of Service "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerPhone" />
-
     <Button
         android:id="@+id/registerPhone"
         android:layout_width="wrap_content"
@@ -77,7 +63,7 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="9dp"
         app:layout_constraintTop_toBottomOf="@+id/changePassword"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
@@ -97,3 +83,4 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 </android.support.constraint.ConstraintLayout>
+    </ScrollView>
