--- a/app/src/main/res/layout/activity_add_video.xml
+++ b/app/src/main/res/layout/activity_add_video.xml
@@ -22,8 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
-    <TextView
+<TextView
         android:id="@+id/textView20"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -40,15 +39,11 @@
         app:layout_constraintTop_toBottomOf="@+id/videoItemLayout" />
 
 
-
-
-
-
     <Button
         android:id="@+id/AddVideo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="-7dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="Add"
@@ -57,10 +52,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp" />
+        android:layout_marginEnd="8dp" />
     <LinearLayout
-android:layout_width="match_parent"
+android:layout_width="0dp"
     android:weightSum="2"
     android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -69,7 +63,9 @@ android:layout_width="match_parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
     <TextView
         android:id="@+id/textView21"
         android:layout_width="match_parent"
@@ -103,7 +99,9 @@ android:layout_width="match_parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
         <TextView
             android:id="@+id/textView22"
@@ -141,7 +139,9 @@ android:layout_width="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/linearLayout5">
+        android:id="@+id/linearLayout5"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
         <TextView
             android:id="@+id/textView24"
@@ -169,3 +169,4 @@ android:layout_width="match_parent"
 
 
 </android.support.constraint.ConstraintLayout>
+
