--- a/app/src/main/res/layout/activity_edit_school_details.xml
+++ b/app/src/main/res/layout/activity_edit_school_details.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -177,3 +180,4 @@
             android:textAlignment="textEnd" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
+    </ScrollView>
