--- a/app/src/main/res/layout/email_login.xml
+++ b/app/src/main/res/layout/email_login.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -77,3 +80,4 @@
         android:text="Login" />
 
 </LinearLayout>
+    </ScrollView>
