--- a/app/src/main/res/layout/nav_header_navigation_drawer.xml
+++ b/app/src/main/res/layout/nav_header_navigation_drawer.xml
@@ -15,16 +15,19 @@
     <ImageView
         android:id="@+id/imageView"
         android:contentDescription="App Logo"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
+        android:layout_width="100dp"
+        android:layout_height="120dp"
         android:scaleType="fitXY"
         app:srcCompat="@mipmap/cognichamplogo" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:padding="5dp"
         android:text="@string/app_name"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:textAlignment="textEnd"
         android:gravity="center_vertical"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
