--- a/app/src/main/res/layout/profile1.xml
+++ b/app/src/main/res/layout/profile1.xml
@@ -129,7 +129,7 @@
 
         <EditText
             android:id="@+id/nameProfile"
-            android:layout_width="358dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Name"
