--- a/app/src/main/res/layout-xlarge/educationnew.xml
+++ b/app/src/main/res/layout-xlarge/educationnew.xml
@@ -4,26 +4,28 @@
     android:layout_height="match_parent"
     android:layout_margin="5dp"
     android:orientation="vertical">
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="horizontal"
         android:weightSum="2">
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Select a Class"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Select a Class"
+            android:textSize="20sp" />
 
-    <Spinner
-        android:id="@+id/selectClassEducation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textAlignment="textEnd" />
+        <Spinner
+            android:id="@+id/selectClassEducation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
     </LinearLayout>
 
     <android.support.design.widget.TabLayout
