Towards 2nd Realease....

--- a/app/src/main/res/layout-xlarge/educationnew.xml
+++ b/app/src/main/res/layout-xlarge/educationnew.xml
@@ -23,7 +23,7 @@
         <Spinner
             android:id="@+id/selectClassEducation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textAlignment="textEnd"
             android:textSize="@dimen/largeTextSize" />
