--- a/app/src/main/res/layout-xlarge/fragment_empty.xml
+++ b/app/src/main/res/layout-xlarge/fragment_empty.xml
@@ -5,6 +5,7 @@
     tools:context="com.cognichamp.CogniChamp.emptyFragment">
 
     <TextView
+        android:id="@+id/emptyText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
