--- a/app/src/main/res/drawable/ic_arrow_drop_down_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_arrow_drop_down_black_24dp.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+    android:width="50dp"
+    android:height="50dp"
+    android:viewportHeight="24.0"
+    android:viewportWidth="24.0">
     <path
-        android:fillColor="#ffffff"
+        android:fillColor="#131313"
         android:pathData="M7,10l5,5 5,-5z"/>
 </vector>
