--- a/app/src/main/res/layout-xlarge/activity_add_hobby_activityt.xml
+++ b/app/src/main/res/layout-xlarge/activity_add_hobby_activityt.xml
@@ -35,7 +35,7 @@
             <Spinner
                 android:id="@+id/chooseHobbyGroup"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="end"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
