--- a/app/src/main/res/layout-xlarge/activity_add_video.xml
+++ b/app/src/main/res/layout-xlarge/activity_add_video.xml
@@ -87,7 +87,7 @@
         <Spinner
             android:id="@+id/subjectAddApinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="end"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -128,7 +128,7 @@
         <Spinner
             android:id="@+id/topicAddSpinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="end"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
@@ -168,7 +168,7 @@
         <Spinner
             android:id="@+id/classSpinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="end"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
