--- a/app/src/main/res/layout-xlarge/activity_another.xml
+++ b/app/src/main/res/layout-xlarge/activity_another.xml
@@ -33,7 +33,7 @@
         <Spinner
             android:id="@+id/selectClassVideo"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="match_parent"
             android:layout_gravity="end"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
