--- a/app/src/main/res/layout-xlarge/activity_edit_school_details.xml
+++ b/app/src/main/res/layout-xlarge/activity_edit_school_details.xml
@@ -103,7 +103,7 @@
             <Spinner
                 android:id="@+id/chooseStateSchool"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
@@ -145,7 +145,7 @@
             <Spinner
                 android:id="@+id/chooseCity"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
@@ -188,7 +188,7 @@
             <Spinner
                 android:id="@+id/selectSchool"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
