--- a/app/src/main/res/layout-xlarge/activity_login.xml
+++ b/app/src/main/res/layout-xlarge/activity_login.xml
@@ -71,6 +71,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/colorPrimary"
+                android:padding="20dp"
                 android:text="Sign Up With Your Email"
                 android:textAllCaps="false"
                 android:textColor="@color/cardview_light_background"
