--- a/app/src/main/res/layout-xlarge/family_member.xml
+++ b/app/src/main/res/layout-xlarge/family_member.xml
@@ -102,7 +102,7 @@
             <Spinner
                 android:id="@+id/familyMemberRelation"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="end"
                 android:layout_weight="1"
                 android:minWidth="150dp"
