--- a/app/src/main/res/layout-xlarge/new_education_details.xml
+++ b/app/src/main/res/layout-xlarge/new_education_details.xml
@@ -123,7 +123,7 @@
                     <Spinner
                         android:id="@+id/selectTestType"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_marginEnd="8dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
