--- a/app/src/main/res/layout/family_member.xml
+++ b/app/src/main/res/layout/family_member.xml
@@ -9,22 +9,22 @@
         android:id="@+id/textInputLayout15"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <EditText
             android:id="@+id/PhoneNumberFamily"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="phone"
             android:hint="Contact Number"
+            android:inputType="phone"
             android:maxLength="10"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="27dp" />
@@ -34,22 +34,22 @@
         android:id="@+id/textInputLayout6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout15"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout15">
 
         <EditText
             android:id="@+id/EmailIdFamily"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="Email" />
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
     </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
@@ -70,8 +70,8 @@
             android:id="@+id/photoFamily"
             android:layout_width="200dp"
             android:layout_height="100dp"
-            android:contentDescription="Family Member Photo"
             android:layout_weight="1"
+            android:contentDescription="Family Member Photo"
             app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
 
         <LinearLayout
@@ -96,7 +96,7 @@
             <Spinner
                 android:id="@+id/familyMemberRelation"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textAlignment="textEnd" />
 
