--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,13 @@
 
     <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
         <item name="android:textSize">40sp</item>
+        <item name="android:dropDownSelector">@drawable/ic_arrow_drop_down_black_24dp</item>
+        <item name="android:checkMark">@drawable/ic_arrow_drop_down_black_24dp</item>
     </style>
+
+    <style name="SpinnerAppTheme" parent="android:Widget.Spinner">
+        <item name="android:dropDownSelector">@drawable/ic_arrow_drop_down_black_24dp</item>
+    </style>
+
 
 </resources>
